ci: Install 'compiledb' with pip instead of apt.
Signed-off-by: TunaCici <36923239+TunaCici@users.noreply.github.com>

--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install Dependencies
         run: |
           sudo apt update
-          sudo apt install -y compiledb
+          python3 -m pip install compiledb
 
       - name: Build all
         run: |
