--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ xcuserdata/
 # VSCode
 .vscode
 
+# Compiledb
+compile_commands.json
+
 # Compiled Object files
 *.slo
 *.lo
@@ -36,3 +39,4 @@ xcuserdata/
 # Executables
 *.exe
 *.out
+Tests/all_test
