--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Project related
+results.txt
+graph.html
+
 # Cache files
 .cache/*
 
@@ -16,6 +20,9 @@ xcuserdata/
 
 # Compiledb
 compile_commands.json
+
+# Python
+.venv
 
 # Compiled Object files
 *.slo
@@ -41,4 +48,3 @@ compile_commands.json
 *.out
 all_test
 bench
-Tests/all_test
